change to movies list in favourites and show year with the title

--- a/IMDB Favorites/Base.lproj/Main.storyboard
+++ b/IMDB Favorites/Base.lproj/Main.storyboard
@@ -33,6 +33,16 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="539" id="4dq-hh-dMb"/>
                                 </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="2eu-92-DI2">
+                                        <rect key="frame" x="0.0" y="28" width="343" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2eu-92-DI2" id="ckz-es-VjU">
+                                            <frame key="frameInset" width="343" height="49"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="9pv-A4-QxB" id="OZr-3B-Vu9"/>
                                 </connections>
